--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^1.1.0",
+    "ajv": "^6.6.2",
     "axios": "^0.18.0",
     "countup": "^1.8.2",
     "echarts": "^4.2.0-rc.2",
     "i18n": "^0.8.3",
-    "iview": "^3.1.4",
+    "iview": "^3.2.1",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mavon-editor": "^2.6.17",
     "notification": "0.0.6",
     "qs": "^6.5.2",
+    "tinymce": "^4.9.2",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.2.1",
     "vue-i18n": "^8.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -53,7 +58,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
